Missing functionality * JWT middleware * Route updates * Error handler minor change * Added missing api entity parsing
